--- a/Text-Config.mediawiki
+++ b/Text-Config.mediawiki
@@ -171,7 +171,7 @@ Note that links do not have to be symmetrical; for instance, here the edge betwe
 : If set to ''true'' then secondary screens move the mouse using relative rather than absolute mouse moves when and only when the cursor is locked to the screen (by ''Scroll Lock'' or a configured hot key). This is intended to make Synergy work better with certain games. If set to ''false'' or not set then all mouse moves are absolute.
 
 * <code>keystroke(key) = actions</code>
-: Binds the ''key'' combination key to the given ''actions''. ''key'' is an optional list of modifiers (''shift'', ''control'', ''alt'', ''meta'' or ''super'') optionally followed by a character or a key name, all separated by + (plus signs). You must have either modifiers or a character/key name or both. See below for [[#Keynames|valid key names]] and [[#Actions|actions]].
+: Binds the ''key'' combination key to the given ''actions''. ''key'' is an optional list of modifiers (''shift'', ''control'', ''alt'', ''meta'' or ''super'') optionally followed by a character or a key name, all separated by + (plus signs). You must have either modifiers or a character/key name or both. See below for [[Text Config#Keynames|valid key names]] and [[Text Config#Actions|actions]].
 : Keyboard hot keys are handled while the cursor is on the primary screen and secondary screens. Separate actions can be assigned to press and release.
 
 * <code>mousebutton(button) = actions</code>
@@ -208,7 +208,7 @@ Actions are two lists of individual actions separated by commas. The two lists a
 * <code>switchInDirection(dir)</code>
 : Switch to the screen in the direction ''dir'', which may be one of ''left'', ''right'', ''up'' or ''down''.
 
-==== Keynames ====
+====Keynames====
 Valid key names are:
 {|
 |
