adding links to pages

--- a/_Sidebar.md.mediawiki
+++ b/_Sidebar.md.mediawiki
@@ -8,6 +8,13 @@
 * [[Security]]
 * [[Requirements]]
 * [[Startup]]
+* [[Command line]]
+* [[Use as a KVM]]
+* [[IOS client]]
+* [[Android client]]
+* [[Conflicting software]]
+* [[Related software]]
+* [[Archived content]]
 * [http://synergy-project.org/wiki/User Legacy Wiki]
 
 ==Developer==
