--- a/Version-1.3.mediawiki
+++ b/Version-1.3.mediawiki
@@ -116,7 +116,7 @@ where '''name''' is the name for the client in the server's configuration.  (On 
 
 == Step 5 - Test ==
 
-Clients should immediately report a successful connection or one or more error messages.  Some typical problems and possible solutions are below.  See the [[Troubleshooting]] and the [UserFAQ]] pages for more help.
+Clients should immediately report a successful connection or one or more error messages.  Some typical problems and possible solutions are below.  See the [[Troubleshooting]] and the [[Old FAQ|FAQ]] pages for more help.
 * failed to open screen (X11 only)
 ** Check permission to open the X display;<br> check that the DISPLAY environment variable is set<br> use the '''--display''' command line option.
 
@@ -149,7 +149,7 @@ Once everything works correctly, stop all the clients then the server.  Then sta
 
 '''Logging Level''' to '''Warning''' so the logging window doesn't pop up (because you currently can't close it, just minimize it).
 
-You can also configure synergy to start automatically when your computer starts or when you log in.  See the [[autostarting|autostarting guide]] for more information.
+You can also configure synergy to start automatically when your computer starts or when you log in.  See the [[Autostarting|autostarting guide]] for more information.
 
 h1. Command Line Options Guide
 
@@ -189,7 +189,7 @@ Neither the client nor server will automatically restart if an error occurs that
 <pre>
     synergys [options]
 </pre>
-The server accepts the [[UsingSynergy#Common-Command-Line-Options|common options]] and:
+The server accepts the [[Version 1.3#Common-Command-Line-Options|common options]] and:
 
 {| class="wikitable" cellpadding="2"
 | '''-a,''' || '''--address address''' || listen for connections on address '''address'''
@@ -212,4 +212,4 @@ Where '''address''' has one of the following forms:
     synergyc [options] address[:port]
 </pre>
 
-'''address''' is the hostname or IP address of the server and '''port''' is the optional network port on the server to connect to.  The client accepts the [[UsingSynergy#Common-Command-Line-Options|common options]].
+'''address''' is the hostname or IP address of the server and '''port''' is the optional network port on the server to connect to.  The client accepts the [[Version 1.3#Common-Command-Line-Options|common options]].
