--- a/Use-as-a-KVM.mediawiki
+++ b/Use-as-a-KVM.mediawiki
@@ -11,14 +11,14 @@ Every platform currently supported by Synergy provides methods of turning video 
 These are:
 
 * [http://www.x.org/wiki/Projects/XRandR XRandR] for Linux (or probably anything that uses X as basis for a desktop environment)
-* [http://en.wikipedia.org/wiki/Pmset Pmset] for OSX
+* [http://en.wikipedia.org/wiki/Pmset Pmset] for OS X
 * [http://www.nirsoft.net/utils/nircmd.html NirCmd] for Windows ('''Untested''')
 
 We can use these tools to write scripts that will appropriately schedule the toggling of video outputs among the locally attached boxes, so as to provide the appearance of a hardware KVM switch. Existing OS and Synergy functionality can be used to enhance the effect, with globalized keybindings to toggle inputs and relocate focus, clipboard sharing, and flawless interscreen mouse transitions.
 
-==Linux <-> Mac OSX==
+==Linux <nowiki><-></nowiki> Mac OS X==
 
-I succesfully use the following script with a Linux server and Mac OSX client. I suspect that something similar will work with the majority of configurations, but I don't have the capacity for further testing right now.
+I succesfully use the following script with a Linux server and Mac OS X client. I suspect that something similar will work with the majority of configurations, but I don't have the capacity for further testing right now.
 
 This script can be seen in action around 50 seconds into [http://youtu.be/-PyzHl-kqTk#t=50s this video].
 
@@ -30,10 +30,10 @@ Potentially relevant parts of the setup shown are as follows:
 |-
 | Arch Linux || Radeon HD 7700 || Acer V2223W (DFP5) and Acer AL2223W (DFP6)
 |-
-| Mac OSX Lion (10.7.5) || NVIDIA GeForce 9400 || Acer AL2223W (DFP6)
+| Mac OS X Lion (10.7.5) || NVIDIA GeForce 9400 || Acer AL2223W (DFP6)
 |}
 
-Arch is constantly displayed on DFP5, and I toggle between Arch and OSX on DFP6.
+Arch is constantly displayed on DFP5, and I toggle between Arch and OS X on DFP6.
 
 I put the following shell script on the Linux server. Please feel free to improve it:
 <pre>
@@ -65,4 +65,4 @@ sudo /etc/rc.d/synergys restart
 I use the WM on my Synergy host to map a keyboard shortcut to the toggle_display.sh script. Synergy is configured, using [http://synergy2.sourceforge.net/configuration.html keystrokes], to always forward this input event to the host, so that the script on the host can be triggered from anywhere. This configuration also requires that you've shared ssh keys between your server and client, and that both your local and remote users are passwordless sudoers or root, because pmset won't work without root.
 
 ==Problems==
-* On at least some versions of OSX, you have to [http://mactips.dwhoard.com/mactips/system/wake-on-demand fiddle around] if you want to let it sleep in this configuration. The darkwake=no option worked for me.
+* On at least some versions of OS X, you have to [http://mactips.dwhoard.com/mactips/system/wake-on-demand fiddle around] if you want to let it sleep in this configuration. The darkwake=no option worked for me.
