--- a/Use-as-a-KVM.mediawiki
+++ b/Use-as-a-KVM.mediawiki
@@ -16,7 +16,7 @@ These are:
 
 We can use these tools to write scripts that will appropriately schedule the toggling of video outputs among the locally attached boxes, so as to provide the appearance of a hardware KVM switch. Existing OS and Synergy functionality can be used to enhance the effect, with globalized keybindings to toggle inputs and relocate focus, clipboard sharing, and flawless interscreen mouse transitions.
 
-==Linux <pre><-></pre> Mac OS X==
+==Linux and Mac OS X==
 
 I succesfully use the following script with a Linux server and Mac OS X client. I suspect that something similar will work with the majority of configurations, but I don't have the capacity for further testing right now.
 
