--- a/Command-line.mediawiki
+++ b/Command-line.mediawiki
@@ -1,11 +1,12 @@
 Sometimes, for various reasons, the GUI doesn't work or is not ideal for starting up Synergy. In those cases, you can run it from the command line. This can be encapsulated in a batch file or shell script for easy access.
 
-=General Info=
+==General Info==
 The Synergy binaries generally take the same parameters on all 3 platforms.
 
-See [[Textual Config]] for information on how to create a config file. If you have another system on which you can use the GUI, you might consider setting up your system in that GUI, and then exporting the config file with File -> Save Configuration As and copy it over to the system you need it on. The same config file will work on any platform.
+See [[Text Config]] for information on how to create a config file. If you have another system on which you can use the GUI, you might consider setting up your system in that GUI, and then exporting the config file with File -> Save Configuration As and copy it over to the system you need it on. The same config file will work on any platform.
 
-=Windows=
+==Windows==
+
 ===Client===
 Open up a command prompt and cd into the Synergy install directory. Something like:
 
@@ -21,7 +22,8 @@ Again from the Synergy install directory:
 synergys -c [path to config file]
 
 
-=Mac=
+==Mac==
+
 ===Client===
 Open up a Terminal and cd into the Synergy install directory. Something like:
 
@@ -37,7 +39,8 @@ Again from the Synergy install directory:
 ./synergys -c [path to config file]
 
 
-=Linux=
+==Linux==
+
 ===Client===
 Open up a Terminal and cd into the Synergy install directory. Something like:
 
@@ -54,5 +57,73 @@ Again from the Synergy install directory:
 ./synergys -c [path to config file]
 
 ===Command line options===
-* synergyc [[Command line synergyc]]
-* synergys [[Command line synergys]]
+
+====synergyc options====
+
+Taken from linux system:
+
+ $ synergyc --help
+ Usage: synergyc [--yscroll <delta>] [--display <display>] [--no-xinitthreads] [--daemon|--no-daemon] [--name <screen-name>] [--restart|--no-restart] [--debug <level>] <server-address>
+ 
+ Connect to a synergy mouse/keyboard sharing server.
+ 
+  -d, --debug <level>      filter out log messages with priority below level.
+                             level may be: FATAL, ERROR, WARNING, NOTE, INFO,
+                             DEBUG, DEBUG1, DEBUG2.
+  -n, --name <screen-name> use screen-name instead the hostname to identify
+                             this screen in the configuration.
+  -1, --no-restart         do not try to restart on failure.
+ *    --restart            restart the server automatically if it fails.
+  -l  --log <file>         write log messages to file.
+      --no-tray            disable the system tray icon.
+      --enable-drag-drop   enable file drag & drop.
+      --display <display>  connect to the X server at <display>
+      --no-xinitthreads    do not call XInitThreads()
+  -f, --no-daemon          run in the foreground.
+ *    --daemon             run as a daemon.
+      --yscroll <delta>    defines the vertical scrolling delta, which is
+                             120 by default.
+  -h, --help               display this help and exit.
+      --version            display version information and exit.
+
+''* marks defaults''
+
+The ''server address'' is of the form: <pre>[<hostname>][:<port>]</pre>. The ''hostname'' must be the address or hostname of the server. The ''port'' option overrides the default port which is 24800.
+
+Unlike the synergys (Synergy server), the synergyc (Synergy client) has no config file. The options are set either at runtime by the command line on the client, or for settings inherited from Synergy server they are set at connection time.
+
+====synergys options====
+
+Taken from a linux system:
+
+ $ synergys --help
+ Usage: synergys [--address <address>] [--config <pathname>] [--display <display>] [--no-xinitthreads] [--daemon|--no-daemon] [--name <screen-name>] [--restart|--no-restart] [--debug <level>]
+ 
+ Start the synergy mouse/keyboard sharing server.
+ 
+  -a, --address <address>  listen for clients on the given address.
+  -c, --config <pathname>  use the named configuration file instead.
+  -d, --debug <level>      filter out log messages with priority below level.
+                             level may be: FATAL, ERROR, WARNING, NOTE, INFO,
+                             DEBUG, DEBUG1, DEBUG2.
+  -n, --name <screen-name> use screen-name instead the hostname to identify
+                             this screen in the configuration.
+  -1, --no-restart         do not try to restart on failure.
+ *    --restart            restart the server automatically if it fails.
+  -l  --log <file>         write log messages to file.
+      --no-tray            disable the system tray icon.
+      --enable-drag-drop   enable file drag & drop.
+      --display <display>  connect to the X server at <display>
+      --no-xinitthreads    do not call XInitThreads()
+  -f, --no-daemon          run in the foreground.
+ *    --daemon             run as a daemon.
+  -h, --help               display this help and exit.
+      --version            display version information and exit.
+
+''* marks defaults''
+
+The argument for ''address'' is of the form: <pre>[<hostname>][:<port>]</pre>. The hostname must be the address or hostname of an interface on the system. The default is to listen on all interfaces. The ''port'' option overrides the default port which is 24800.
+
+If no configuration file pathname is provided then the first of the following to load successfully sets the configuration:
+ /root/.synergy.conf
+ /etc/synergy.conf</nowiki>
